# showdown

./: .gitignore  .prospector.yml  LICENSE.md  README.md  README.rst  setup.cfg  showdown.py  test1.py
showdown/: __init__.py  bulk.py  game.py  ui.py
showdown/examples/: __init__.py  copycat.py  randomizer.py  shuffler.py
