[metadata]
name = showdown
description = "This town is not big enough for both of our bots"
version = 0.1.0.dev0
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/showdown
long_description = file: README.rst
license = Apache Software License
keywords = game, bots, ia
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    showdown = showdown:main

[options.extras_require]
dev =

test =
    pytest==3.8.0

lint =
    prospector[with_pyroma]
    pyroma==2.0  # https://github.com/landscapeio/prospector/issues/229

[options.packages.find]
exclude =

[bdist_wheel]
universal = 1

[coverage:run]
source = showdown
branch = True

[zest.releaser]
create-wheel = yes

[tool:pytest]
testpaths = tests
